[package]
name = "call-once"
version = "0.1.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "A type that can only be called sucessfully once."
repository = "https://github.com/mkroening/call-once"
license = "MIT OR Apache-2.0"
keywords = ["once"]
categories = ["rust-patterns", "no-std"]
